--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,7 +12,7 @@ body,html{
     margin-top: auto;
     margin-bottom: auto;
 }
-.card{
+.chat-common-card{
     height: 80vh;
     border-radius: 15px !important;
     background-color: rgba(0,0,0,0.4) !important;
@@ -57,7 +57,8 @@ border-radius: 0 0 15px 15px !important;
      box-shadow:none !important;
    outline:0px !important;
 }
-.attach_btn{
+.attach_btn,
+.smile-btn{
 border-radius: 15px 0 0 15px !important;
 background-color: rgba(0,0,0,0.3) !important;
     border:0 !important;
@@ -219,6 +220,16 @@ padding-right: 10px;
 cursor: pointer;
 background-color: rgba(0,0,0,0.2);
 }
+
+
+form.search-form {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    z-index: 9;
+}
+
+
 @media(max-width: 576px){
 .contacts_card{
 margin-bottom: 15px !important;
