--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -92,6 +92,9 @@ background-color: rgba(0,0,0,0.3) !important;
 .active{
     background-color: rgba(255,255,255,0.3);
 }
+
+img{ max-width: 100%;}
+
 .user_img{
     height: 70px;
     width: 70px;
@@ -101,9 +104,9 @@ background-color: rgba(0,0,0,0.3) !important;
 .user_img_msg{
     height: 40px;
     width: 40px;
-    border:1.5px solid #f5f6fa;
 
 }
+
 .img_cont{
     position: relative;
     height: 70px;
@@ -112,6 +115,11 @@ background-color: rgba(0,0,0,0.3) !important;
 .img_cont_msg{
     height: 40px;
     width: 40px;
+
+}
+.img_cont_msg img{ 
+    border:1.5px solid #f5f6fa;
+    border-radius: 50%;
 }
 .online_icon{
 position: absolute;
@@ -262,6 +270,58 @@ textarea:-moz-placeholder { /* Firefox 18- */
     color: #fff;
   }
 
+
+
+/* ------- */
+
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+    0% {
+      top: 28px;
+      left: 28px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: -1px;
+      left: -1px;
+      width: 58px;
+      height: 58px;
+      opacity: 0;
+    }
+  }
+  
+  
+  
+  
+  /* --------------------------*/
+  .loading{
+    position: absolute;
+    background: rgba(0,0,0,0.8);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
 @media(max-width: 576px){
 .contacts_card{
